2017-03-12 Roman (stable)
- UI.QTCfg: InputDlg wrong initialization on the previous commit fixed.


2017-03-11 Roman (stable)
- UI.QTCfg: Fields "ID" and "NAME" of the node control dialog set to the unlimited size
    for next these changing from inforamtion of the control interface.
- !!:UI.WebVision: The visualizer specific attributes support added through its activation.
    !!:Main page scaling to fit to window of the browser allowed space added, only to grow and with the aspect ratio control.
    !: Background of the primitives processing moved to common and after the ones processing and
	the background transparency-opaque support added by a separated block (div) creation with the opaque level.


2017-03-05 Roman (stable)
- DB.LibsDB.OscadaLibs.db: DevLib.1602A expanded to connect by I2C (PCF8574).
- DB.LibsDB.vcaBase: Main.ElViewGraph expanded to the name "<No selected>" blink prevent and
    spare saving prevent once after the successful loading at start.
- FIX:UI.WebVision: WebVisionVCA.html fix for its presence into EXTRA_DIST.


2017-03-04 Roman (stable)
- FIX:UI.WebVision: Miss file WebVisionVCA.html placed to the source tree.


2017-03-03 Roman (stable)
- SYS: The user API functions are appended by function utime() and mtime().
- !!:FIX:Archive: Fix for checking for a propper archivator by its periodicity,
    which allow for correct selection archivators in periodicity more then one minute in graphics building.
- !!:FIX:Archive.FSArch: Fix for too long messages back reading and wrong messages reading prevented at all.
    Function of archivators checking is fixed for correct processing of the capacity limit of the values archiving
    by the archives sorting to remove its files at its maximum quantity.
- !!!:UI.WebCfgD: Fit to allowed space for scalable by vertical elements.
    Border color of the input elements changed to "gray".
    The structural class "SSess" moved to the strucure type.